--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,37 +64,21 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
-
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware
-
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/assets-and-images/#from-packages
-
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/custom-fonts/#from-packages
+  assets:
+    - assets/
+  fonts:
+    - family: RocknRoll_One
+      fonts:
+        - asset: assets/fonts/RocknRoll_One/RocknRollOne-Regular.ttf
+    - family: Yusei_Magic
+      fonts:
+        - asset: assets/fonts/Yusei_Magic/YuseiMagic-Regular.ttf
+    - family: Noto_Sans_JP
+      fonts:
+        - asset: assets/fonts/Noto_Sans_JP/Noto_Sans_JP-Regular.otf
+    - family: Zen_Maru_Gothic
+      fonts:
+        - asset: assets/fonts/Zen_Maru_Gothic/Zen_Maru_Gothic-Regular.ttf
 
 flutter_icons:
   android: true
