--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,26 +7,27 @@ version: 1.0.0+1
 environment:
   sdk: ">=2.18.2 <3.0.0"
 dependencies:
+  build_runner: ^2.2.1
   flutter:
     sdk: flutter
-  hooks_riverpod: ^2.2.0
-  go_router: ^5.0.5
-  json_annotation: ^4.7.0
-  freezed_annotation: ^2.1.0
-  freezed: ^2.1.1
-  build_runner: ^2.2.1
-  mockito: ^5.3.2
-  shared_preferences: ^2.0.15
-  intl: ^0.17.0
-  logger: ^1.1.0
   flutter_native_splash: ^2.2.10+1
+  freezed: ^2.1.1
+  freezed_annotation: ^2.1.0
+  go_router: ^5.0.5
+  hooks_riverpod: ^2.2.0
+  intl: ^0.17.0
+  json_annotation: ^4.7.0
+  logger: ^1.1.0
+  mockito: ^5.3.2
+  riverpod_lint: ^1.0.1
+  shared_preferences: ^2.0.15
   url_launcher: ^6.1.6
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
   flutter_launcher_icons: ^0.10.0
   flutter_lints: ^2.0.0
+  flutter_test:
+    sdk: flutter
 
 flutter:
   uses-material-design: true
