--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
   json_annotation: ^4.7.0
   logger: ^1.1.0
   mockito: ^5.3.2
+  riverpod_annotation: ^2.1.0
+  riverpod_generator: ^2.1.5
   riverpod_lint: ^1.0.1
   shared_preferences: ^2.0.15
   url_launcher: ^6.1.6
