--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,12 +10,14 @@ dependencies:
   build_runner: ^2.2.1
   collection: ^1.17.0
   dio: ^5.0.0
+  encrypt: ^5.0.1
   flutter:
     sdk: flutter
   flutter_native_splash: ^2.2.16
   freezed: ^2.1.1
   freezed_annotation: ^2.1.0
   go_router: ^5.0.5
+  hashids2: ^2.0.0
   hooks_riverpod: ^2.2.0
   intl: ^0.17.0
   json_annotation: ^4.7.0
@@ -26,6 +28,7 @@ dependencies:
   riverpod_lint: ^1.0.1
   shared_preferences: ^2.0.15
   url_launcher: ^6.1.6
+  uuid: ^3.0.7
 
 dev_dependencies:
   flutter_launcher_icons: ^0.10.0
