--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,7 +9,7 @@ environment:
 dependencies:
   build_runner: ^2.2.1
   collection: ^1.17.0
-  dio: ^5.0.0
+  dio: ^5.1.1
   encrypt: ^5.0.1
   flutter:
     sdk: flutter
@@ -22,7 +22,8 @@ dependencies:
   intl: ^0.17.0
   json_annotation: ^4.7.0
   logger: ^1.1.0
-  mockito: ^5.3.2
+  mockito: ^5.4.0
+  retrofit: ^4.0.1
   riverpod_annotation: ^2.1.0
   riverpod_generator: ^2.1.5
   riverpod_lint: ^1.0.1
