--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,11 +8,13 @@ environment:
   sdk: ">=2.18.2 <3.0.0"
 dependencies:
   build_runner: ^2.2.1
+  cached_network_image: ^3.2.3
   collection: ^1.17.0
   dio: ^5.1.1
   encrypt: ^5.0.1
   flutter:
     sdk: flutter
+  flutter_hooks: ^0.18.6
   flutter_native_splash: ^2.2.16
   freezed: ^2.1.1
   freezed_annotation: ^2.1.0
@@ -20,9 +22,12 @@ dependencies:
   hashids2: ^2.0.0
   hooks_riverpod: ^2.2.0
   intl: ^0.17.0
+  isar: ^3.1.0+1
+  isar_flutter_libs: ^3.1.0+1
   json_annotation: ^4.7.0
   logger: ^1.1.0
   mockito: ^5.4.0
+  path_provider: ^2.0.15
   retrofit: ^4.0.1
   riverpod_annotation: ^2.1.0
   riverpod_generator: ^2.1.5
@@ -36,6 +41,7 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
+  isar_generator: ^3.1.0+1
 
 flutter:
   uses-material-design: true
