--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,18 +10,21 @@ dependencies:
   build_runner: ^2.2.1
   cached_network_image: ^3.2.3
   collection: ^1.17.0
+  device_preview: ^1.1.0
   dio: ^5.1.1
   encrypt: ^5.0.1
   flutter:
     sdk: flutter
   flutter_hooks: ^0.18.6
+  flutter_localizations:
+    sdk: flutter
   flutter_native_splash: ^2.2.16
   freezed: ^2.1.1
   freezed_annotation: ^2.1.0
   go_router: ^5.0.5
   hashids2: ^2.0.0
   hooks_riverpod: ^2.2.0
-  intl: ^0.17.0
+  intl: ^0.18.0
   isar: ^3.1.0+1
   isar_flutter_libs: ^3.1.0+1
   json_annotation: ^4.7.0
@@ -37,7 +40,8 @@ dependencies:
   uuid: ^3.0.7
 
 dev_dependencies:
-  flutter_launcher_icons: ^0.10.0
+  dart_code_metrics: ^5.7.4
+  flutter_launcher_icons: ^0.13.1
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
