very_good_analysis導入

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   isar_generator: ^3.1.0+1
+  very_good_analysis: ^5.1.0
 
 flutter:
   uses-material-design: true
